<resources>
    <string name="app_name">Raccoon</string>
    <string name="app_store_url">https://play.google.com/store/apps/details?id=wacode.yamada.yuki.nempaymentapp</string>
    <string name="com_ok">OK</string>
    <string name="com_yes">YES</string>
    <string name="com_no">NO</string>
    <string name="com_cancel">CANCEL</string>
    <string name="com_nem">nem</string>
    <string name="com_xem_uppercase">XEM</string>
    <string name="com_nem_uppercase">NEM</string>
    <string name="com_jpy_uppercase">JPY</string>
    <string name="com_jp_yen">円</string>
    <string name="com_copied">クリップボードにコピーしました</string>
    <string name="com_paste_error">貼り付けできませんでした</string>
    <string name="com_message">Message</string>
    <string name="com_mosaic">Mosaic</string>
    <string name="com_prefix_plus">+</string>
    <string name="com_prefix_minus">-</string>
    <string name="com_enter">完了</string>
    <string name="com_home_uppercase">HOME</string>
    <string name="com_node">ノード</string>
    <string name="com_authenticate">認証</string>
    <string name="com_success">成功</string>
    <string name="com_failed">失敗</string>
    <string name="com_coming_soon">Coming Soon!</string>
    <string name="com_name">名前</string>
    <string name="com_name_ruby">なまえ</string>
    <string name="com_phone_number">電話番号</string>
    <string name="com_mail_address">メールアドレス</string>
    <string name="com_add">追加</string>
    <string name="com_save">保存</string>
    <string name="com_currency">通貨</string>
    <string name="com_edit">編集</string>
    <string name="com_select">選択</string>
    <string name="com_complete">完了</string>
    <string name="com_delete">削除</string>
    <string name="menu_search">検索</string>
    <string name="splash_title">Splash Screen</string>
    <string name="splash_node_select_error">Node : Alice2を選択しました</string>
    <string name="main_toolbar">Hello NEMber</string>
    <string name="main_navigation_menu">MENU</string>
    <string name="main_navigation_home">HOME</string>
    <string name="main_navigation_address_book">アドレス帳</string>
    <string name="main_navigation_qr_labo">QR Labo</string>
    <string name="main_navigation_scan">Scan</string>
    <string name="main_navigation_mosaic_gallery">モザイクギャラリー</string>
    <string name="main_navigation_donate">寄付</string>
    <string name="main_navigation_faucet">Faucet</string>
    <string name="main_navigation_about">About</string>
    <string name="main_navigation_help">Help</string>
    <string name="main_navigation_setting">設定</string>
    <string name="main_bottom_navigation_receive">RECEIVE</string>
    <string name="main_bottom_navigation_home">HOME</string>
    <string name="main_bottom_navigation_send">SEND</string>
    <string name="main_bottom_navigation_qr_labo">QR Lab</string>
    <string name="main_bottom_navigation_scan">SCAN</string>
    <string name="main_navigation_null">ウォレット未選択</string>
    <string name="first_tutorial_button">はじめる</string>
    <string name="first_tutorial_title1">はじめまして</string>
    <string name="first_tutorial_title2">信頼の革新を手のひらに</string>
    <string name="first_tutorial_title3">すべての人に経済を。</string>
    <string name="first_tutorial_message1">お会いできて光栄です。\nブロックチェーンを使った新しい経済活動を\n一緒にはじめましょう。</string>
    <string name="first_tutorial_message2">すべてが暗号通貨ベースで設計され,\nすべてが新しい考え方で動く、\nニューエコノミープラットフォーム。\n魅力的な体験は、ここから始まります。</string>
    <string name="first_tutorial_message3">自由と共創の新経済が待っています。</string>
    <string name="fragment_qr_lab_dentaku">指定金額を受けとる</string>
    <string name="fragment_qr_lab_sell_list">売り物リスト機能を使う</string>
    <string name="fragment_qr_lab_register">QRレジスター</string>
    <string name="fragment_qr_lab_register_description">対応コードをスキャンして、合計金額を請求するQRコードを生成する</string>
    <string name="home_fragment_jpy_before">JPY : </string>
    <string name="home_fragment_error_account">アカウント取得エラー</string>
    <string name="home_fragment_error_transaction">トランザクション取得エラー</string>
    <string name="home_fragment_empty_transaction">まだ送受信は\nされていないみたいです。</string>
    <string name="home_fragment_empty_harvest">まだハーベストの記録は\nないようです。</string>
    <string name="home_fragment_not_select_wallet">ウォレットが選択されていません</string>
    <string name="activity_send_mosaic_hint">メッセージを入力</string>
    <string name="activity_send_mosaic_prefix">%d / 1024</string>
    <string name="activity_mosaic_list_title">モザイクギャラリー</string>
    <string name="activity_mosaic_empty_title">モザイクがありません</string>
    <string name="activity_mosaic_empty_description">お見せできるモザイクは、今のところなさそうです。\nすてきなギャラリーになるよう、\nコレクションに励んでみましょう！</string>
    <string name="pin_code_fragment_enter">PINを入力</string>
    <string name="pin_code_fragment_confirm">PINの確認</string>
    <string name="pin_code_setting_success">設定完了しました</string>
    <string name="pin_code_setting_confirm_error">PIN Codeが一致しません。\nもう一度入力してください。</string>
    <string name="calculator_title">金額の指定</string>
    <string name="calculator_digit_0">0</string>
    <string name="calculator_digit_1">1</string>
    <string name="calculator_digit_2">2</string>
    <string name="calculator_digit_3">3</string>
    <string name="calculator_digit_4">4</string>
    <string name="calculator_digit_5">5</string>
    <string name="calculator_digit_6">6</string>
    <string name="calculator_digit_7">7</string>
    <string name="calculator_digit_8">8</string>
    <string name="calculator_digit_9">9</string>
    <string name="calculator_dot_sign">.</string>
    <string name="calculator_plus_sign">+</string>
    <string name="calculator_minus_sign">-</string>
    <string name="calculator_multiplication_sign">×</string>
    <string name="calculator_division_sign">÷</string>
    <string name="calculator_equals_sign">=</string>
    <string name="calculator_backspace">⌫</string>
    <string name="calculator_ce">CE</string>
    <string name="calculator_max">MAX</string>
    <string name="calculator_right_arrow">→</string>
    <string name="calculator_error">Error</string>
    <string name="calculator_amount">金額</string>
    <string name="calculator_send_user">送り先</string>
    <string name="calculator_error_max">最大値の取得に失敗しました。ネットワーク環境をご確認ください。</string>
    <string name="nem_converter_activity_title">NEM/JPY 通貨コンバータ</string>
    <string name="nem_converter_number_input_error">数字以外入力できません</string>
    <string name="nem_converter_error_price">取得できませんでした</string>
    <string name="nem_converter_current_nem_price">1 NEM = %1$s JPY (Zaif)</string>
    <string name="receive_fragment_address">Your Address</string>
    <string name="receive_fragment_address_toast">アドレスをコピーしました</string>
    <string name="invoice_activity_title">請求書の発行</string>
    <string name="invoice_activity_hint_name">名前</string>
    <string name="invoice_activity_hint_address">アドレス</string>
    <string name="invoice_activity_hint_count">数量</string>
    <string name="invoice_activity_hint_message">メッセージ</string>
    <string name="select_wallet_activity_header_main">Hi,Wallet maintenance?</string>
    <string name="select_wallet_activity_create_new_wallet">ウォレットを新しく作る</string>
    <string name="select_wallet_activity_login">秘密鍵からインポート</string>
    <string name="select_wallet_empty_title">ウォレットがないみたい。</string>
    <string name="select_wallet_empty_message">上のボタンからウォレットを作成するか\nアカウントをリンクすると、ここに一覧で表示されますよ。</string>
    <string name="instant_send_nem_activity_title">簡易送金</string>
    <string name="instant_send_nem_activity_setting_account">設定済みアドレス</string>
    <string name="instant_send_nem_activity_name">名前:</string>
    <string name="instant_send_nem_activity_address">アドレス:</string>
    <string name="instant_send_nem_balance">残高</string>
    <string name="instant_send_nem_change_address">変更</string>
    <string name="transaction_list_activity_title">トランザクション一覧</string>
    <string name="transaction_list_activity_row_multisig_transaction">これはマルチシグトランザクションです</string>
    <string name="transaction_list_activity_row_unconfirmed">oops!まだ未承認のトランザクション</string>
    <string name="transaction_list_activity_row_address">アドレス</string>
    <string name="transaction_list_activity_row_message">メッセージ</string>
    <string name="transaction_list_activity_empty_title">おっと、まだ取引はないようです。</string>
    <string name="transaction_list_activity_empty_message">トランザクションが発生したら、\nここに一覧で表示されます。</string>
    <string name="transaction_detail_title">トランザクション詳細</string>
    <string name="transaction_detail_first_amount">%1$s XEM</string>
    <string name="transaction_detail_second_amount">Amount : %1$s XEM</string>
    <string name="transaction_detail_second_non_amount">Amount : 取引量不明</string>
    <string name="transaction_detail_fee">Fee : %1$s XEM</string>
    <string name="transaction_detail_block">Block : %1$d</string>
    <string name="transaction_detail_hash">Hash : </string>
    <string name="transaction_detail_non_message">no message</string>
    <string name="transaction_detail_mosaic_count">Mosaic : %1$d type</string>
    <string name="transaction_detail_mosaic_name">Name : %1$s</string>
    <string name="transaction_detail_mosaic_amount">Amount : %1$s</string>
    <string name="transaction_detail_non_amount">取引量不明</string>
    <string name="transaction_detail_non_address">アドレス不明</string>
    <string name="transaction_detail_encrypt_message">メッセージは暗号化されています</string>
    <string name="transaction_detail_decrypt_error_message">解除に失敗しました</string>
    <string name="transaction_detail_pin_code_title">認証を行いメッセージを開封します</string>
    <string name="send_top_fragment_send">送信先</string>
    <string name="send_top_fragment_hint">送信先アドレスを入力</string>
    <string name="send_top_fragment_address_error">有効なアドレスではありません</string>
    <string name="send_top_fragment_not_select_wallet">ウォレットが選択されていません</string>
    <string name="send_top_fragment_confirm_title">おっと、気をつけて。</string>
    <string name="send_top_fragment_confirm_message">あなたが送ろうとしているアドレスは、これまで一度もブロックチェーン上で活動していない初心者のようです。とはいえアドレスがちゃんとした形式なら送金は可能ですから、ご安心ください。\nアドレスは正しいか、送り先は信頼できるか、よく確かめてから手続きしてくださいね。</string>
    <string name="send_top_fragment_amount_confirm_title">おっと、数量が0XEMのようです</string>
    <string name="send_top_fragment_amount_confirm_message">0XEM送信しようとしてしていますが、問題ありませんか？</string>
    <string name="send_top_fragment_amount_confirm_dialog_positive">はい</string>
    <string name="send_top_fragment_amount_confirm_dialog_negative">いいえ</string>
    <string name="send_top_fragment_message_confirm_title">メッセージに何も入力されていないようです</string>
    <string name="send_top_fragment_message_confirm_message">メッセージを空で送ろうとしています。\nこのまま送ってもいいですか？</string>
    <string name="send_top_fragment_message_confirm_dialog_positive">はい</string>
    <string name="send_top_fragment_message_confirm_dialog_negative">添付する</string>
    <string name="select_send_mode_fragment_title">送信モードを選んでください</string>
    <string name="select_send_mode_fragment_sub_title">メッセージを添付しますか？</string>
    <string name="select_send_mode_fragment_standard_title">STANDARD SEND</string>
    <string name="select_send_mode_fragment_standard_hint">メッセージは添付せず送金します。</string>
    <string name="select_send_mode_fragment_standard_message">普通の送金でいいよ</string>
    <string name="create_wallet_fragment_greeting">ウォレットの新規作成ですね！\nそれでは早速、あなたのウォレットを作っていきましょう。\nまず最初にウォレットに名前をつけてください。\n決まりはないので、お好きなもので大丈夫ですよ。</string>
    <string name="create_wallet_fragment_edit_text_wallet_name_hint">ウォレットの名前を入力</string>
    <string name="create_wallet_fragment_confirm_description">アプリの利用を開始する前に、ご確認ください。</string>
    <string name="create_wallet_fragment_terms_of_service"><u>利用規約とプライバシーポリシー</u></string>
    <string name="setting_home_common_section">一般</string>
    <string name="setting_home_language">言語選択</string>
    <string name="setting_home_notification">通知設定</string>
    <string name="setting_home_security_section">セキュリティ</string>
    <string name="setting_home_password">パスワードの設定・変更</string>
    <string name="setting_home_fingerprint">指紋の要求</string>
    <string name="setting_home_app_lock">起動時にPIN入力を要求する</string>
    <string name="setting_home_security_lesson">セキュリティレッスンを受ける</string>
</resources>