<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <group
        android:id="@+id/home">
        <item
            android:id="@+id/menu_home"
            android:icon="@android:drawable/ic_menu_gallery"
            android:title="@string/main_navigation_home"
            />
    </group>
    <group
        android:id="@+id/qr_labo">
        <item
            android:icon="@android:drawable/ic_menu_gallery"
            android:title="@string/main_navigation_qr_labo"/>
    </group>
    <group
        android:id="@+id/scan">
        <item
            android:icon="@android:drawable/ic_menu_gallery"
            android:title="@string/main_navigation_scan"/>
    </group>
    <group
        android:id="@+id/mosaic_gallery">
        <item
            android:icon="@android:drawable/ic_menu_gallery"
            android:title="@string/main_navigation_mosaic_gallery"/>
    </group>
    <group
        android:id="@+id/faucet">
        <item
            android:icon="@android:drawable/ic_menu_gallery"
            android:title="@string/main_navigation_faucet"/>
    </group>
    <group
        android:id="@+id/about">
        <item
            android:icon="@android:drawable/ic_menu_gallery"
            android:title="@string/main_navigation_about"/>
    </group>
    <group
        android:id="@+id/gallery">
        <item
            android:icon="@android:drawable/ic_menu_gallery"
            android:title="@string/main_navigation_help"/>
    </group>
</menu>