<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="34dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="16dp"
            android:text="@string/calculator_amount"
            android:textColor="@color/nemGreen" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txtDisplay"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:text="@string/calculator_digit_0"
                    android:textColor="@color/textBlack"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/txtSignals"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:gravity="right"
                    android:text="@string/calculator_plus_sign"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/textDisplayRight"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:text="@string/calculator_digit_0"
                    android:textColor="@color/textBlack"
                    android:textSize="24sp"
                    android:visibility="gone" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="4dp"
                    android:text="@string/com_xem_uppercase"
                    android:textColor="@color/textBlack"
                    android:textSize="24sp" />
            </LinearLayout>
        </FrameLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="bottom"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="right"
            android:orientation="horizontal">

            <android.support.v4.widget.Space
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <Button
                android:id="@+id/btnMAX"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/gray_medium"
                android:foreground="?selectableItemBackground"
                android:text="@string/calculator_max"
                android:textColor="@android:color/white"
                android:textSize="14sp" />

            <Button
                android:id="@+id/btnRightArrow"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/nemOrange"
                android:foreground="?selectableItemBackground"
                android:text="@string/calculator_right_arrow"
                android:textColor="@android:color/white"
                android:textSize="24sp"
                android:textStyle="bold"
                android:visibility="gone" />

            <Button
                android:id="@+id/btnCE"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/border_gray_let_top"
                android:foreground="?selectableItemBackground"
                android:text="@string/calculator_ce"
                android:textSize="24sp" />

            <Button
                android:id="@+id/btnEquals"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/nemGreen"
                android:foreground="?selectableItemBackground"
                android:text="@string/calculator_equals_sign"
                android:textColor="@android:color/white"
                android:textSize="24sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnSeven"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/border_gray_let_top"
                android:foreground="?selectableItemBackground"
                android:text="@string/calculator_digit_7"
                android:textSize="24sp" />

            <Button
                android:id="@+id/btnEight"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/border_gray_let_top"
                android:foreground="?selectableItemBackground"
                android:text="@string/calculator_digit_8"
                android:textSize="24sp" />

            <Button
                android:id="@+id/btnNine"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/border_gray_let_top"
                android:foreground="?selectableItemBackground"
                android:text="@string/calculator_digit_9"
                android:textSize="24sp" />

            <Button
                android:id="@+id/btnDivide"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/nemGreen"
                android:foreground="?selectableItemBackground"
                android:text="@string/calculator_division_sign"
                android:textColor="@android:color/white"
                android:textSize="24sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnFour"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/border_gray_let_top"
                android:foreground="?selectableItemBackground"
                android:text="@string/calculator_digit_4"
                android:textSize="24sp" />

            <Button
                android:id="@+id/btnFive"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/border_gray_let_top"
                android:foreground="?selectableItemBackground"
                android:text="@string/calculator_digit_5"
                android:textSize="24sp" />

            <Button
                android:id="@+id/btnSix"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/border_gray_let_top"
                android:foreground="?selectableItemBackground"
                android:text="@string/calculator_digit_6"
                android:textSize="24sp" />

            <Button
                android:id="@+id/btnMultiply"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/nemGreen"
                android:foreground="?selectableItemBackground"
                android:text="@string/calculator_multiplication_sign"
                android:textColor="@android:color/white"
                android:textSize="24sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnOne"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/border_gray_let_top"
                android:foreground="?selectableItemBackground"
                android:text="@string/calculator_digit_1"
                android:textSize="24sp" />

            <Button
                android:id="@+id/btnTwo"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/border_gray_let_top"
                android:foreground="?selectableItemBackground"
                android:text="@string/calculator_digit_2"
                android:textSize="24sp" />

            <Button
                android:id="@+id/btnThree"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/border_gray_let_top"
                android:foreground="?selectableItemBackground"
                android:text="@string/calculator_digit_3"
                android:textSize="24sp" />

            <Button
                android:id="@+id/btnPlus"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/nemGreen"
                android:foreground="?selectableItemBackground"
                android:text="@string/calculator_plus_sign"
                android:textColor="@android:color/white"
                android:textSize="24sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnDot"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/border_gray_let_top"
                android:foreground="?selectableItemBackground"
                android:text="@string/calculator_dot_sign"
                android:textSize="24sp" />

            <Button
                android:id="@+id/btnZero"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/border_gray_let_top"
                android:foreground="?selectableItemBackground"
                android:text="@string/calculator_digit_0"
                android:textSize="24sp" />

            <Button
                android:id="@+id/btnBack"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/border_gray_let_top"
                android:foreground="?selectableItemBackground"
                android:text="@string/calculator_backspace"
                android:textSize="24sp" />

            <Button
                android:id="@+id/btnMinus"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/nemGreen"
                android:foreground="?selectableItemBackground"
                android:text="@string/calculator_minus_sign"
                android:textColor="@android:color/white"
                android:textSize="24sp" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>