<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/heroImage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/nemGreen"
            android:src="@mipmap/heroimage_setting_large" />

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/selectNodeButton"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/heroImage"
            android:layout_marginRight="@dimen/space_normal"
            android:layout_marginTop="-28dp"
            android:src="@mipmap/icon_node"
            app:backgroundTint="@color/nemBlue" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/heroImage"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/commonSection"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/simpleBackground">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="56dp"
                    android:layout_marginLeft="@dimen/space_normal"
                    android:gravity="center_vertical"
                    android:text="@string/setting_home_common_section"
                    android:textColor="@color/textGray"
                    android:textSize="15sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <wacode.yamada.yuki.nempaymentapp.view.custom_view.SettingListItemNormalView
                android:id="@+id/languageSettingButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:text="@string/setting_home_language" />

            <wacode.yamada.yuki.nempaymentapp.view.custom_view.SettingListItemNormalView
                android:id="@+id/notificationSettingButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:text="@string/setting_home_notification" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/simpleBackground">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="56dp"
                    android:layout_marginLeft="@dimen/space_normal"
                    android:gravity="center_vertical"
                    android:text="@string/setting_home_security_section"
                    android:textColor="@color/textGray"
                    android:textSize="15sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <wacode.yamada.yuki.nempaymentapp.view.custom_view.SettingListItemNormalView
                android:id="@+id/passwordSettingButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:text="@string/setting_home_password" />

            <wacode.yamada.yuki.nempaymentapp.view.custom_view.SettingSwitchItemView
                android:id="@+id/fingerprintSetting"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:text="@string/setting_home_fingerprint" />

            <wacode.yamada.yuki.nempaymentapp.view.custom_view.SettingSwitchItemView
                android:id="@+id/appLockSetting"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:text="@string/setting_home_app_lock" />

            <wacode.yamada.yuki.nempaymentapp.view.custom_view.SettingListItemNormalView
                android:id="@+id/securityLessonLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:text="@string/setting_home_security_lesson" />
        </LinearLayout>
    </RelativeLayout>
</ScrollView>