<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/nemGreen">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@mipmap/heroimage_new_large" />
    </FrameLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/create_wallet_fragment_greeting"
            android:textColor="@color/textBlack"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:layout_marginTop="26dp"
            android:hint="@string/create_wallet_fragment_edit_text_wallet_name_hint"
            android:inputType="text" />

        <Button
            android:id="@+id/button"
            android:layout_width="90dp"
            android:layout_height="36dp"
            android:layout_gravity="center"
            android:layout_marginTop="31dp"
            android:background="@color/nemGreen"
            android:gravity="center"
            android:text="@string/com_ok"
            android:textColor="@android:color/white" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="2dp"
            android:layout_weight="1"
            android:gravity="bottom|center"
            android:text="@string/create_wallet_fragment_confirm_description"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/termsOfServiceTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="24dp"
            android:gravity="center"
            android:paddingBottom="2dp"
            android:text="@string/create_wallet_fragment_terms_of_service"
            android:textColor="@color/nemGreen"
            android:textSize="12sp" />
    </LinearLayout>
</LinearLayout>